[gd_scene load_steps=6 format=2]

[ext_resource path="res://screens/gui/default_gui.gd" type="Script" id=1]
[ext_resource path="res://assets/default.theme" type="Theme" id=2]
[ext_resource path="res://screens/gui/menu_bar.tscn" type="PackedScene" id=3]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0.12549, 0.141176, 0.192157, 1 )

[sub_resource type="StyleBoxFlat" id=3]
content_margin_left = 5.0
content_margin_right = 5.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0.2, 0.227451, 0.309804, 1 )

[node name="DefaultGui" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/separation = 0

[node name="MenuBar" parent="VBoxContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1600.0
margin_bottom = 36.0

[node name="HSplitContainer" type="HSplitContainer" parent="VBoxContainer"]
margin_top = 36.0
margin_right = 1600.0
margin_bottom = 900.0
mouse_filter = 2
size_flags_vertical = 3
split_offset = 164
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/HSplitContainer"]
margin_right = 184.0
margin_bottom = 864.0
custom_styles/panel = SubResource( 1 )

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/HSplitContainer/PanelContainer"]
margin_left = 5.0
margin_right = 179.0
margin_bottom = 859.0
custom_styles/panel = SubResource( 3 )

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/HSplitContainer/PanelContainer/PanelContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 169.0
margin_bottom = 854.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MenuList" type="VBoxContainer" parent="VBoxContainer/HSplitContainer/PanelContainer/PanelContainer/ScrollContainer"]
margin_right = 164.0
margin_bottom = 849.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Anchor" type="Control" parent="VBoxContainer/HSplitContainer/PanelContainer"]
margin_left = 5.0
margin_right = 179.0
margin_bottom = 859.0
mouse_filter = 2

[node name="Grabber" type="Control" parent="VBoxContainer/HSplitContainer/PanelContainer/Anchor"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 15.0

[node name="Empty" type="Control" parent="VBoxContainer/HSplitContainer"]
margin_left = 196.0
margin_right = 1600.0
margin_bottom = 864.0
mouse_filter = 2
